--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "moongoose": "^0.0.5",
-    "nodemon": "^3.1.4"
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5"
   }
 }
