--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=3000
+PORT=5000
 NODE_ENV="development"
-USERNAME="pushkargupta808@gmail.com"
+MAILER_MAIL="pushkargupta808@gmail.com"
 APP_PASSWORD="yqjr npuk ekla tzli"
+dbURI = "mongodb+srv://pushkargupta808:g7LKDPVAVVr5NCTN@cluster0.rj1l6je.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
