--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.1",
     "moongoose": "^0.0.5",
     "nodemailer": "^6.9.14",
